[project]
name = "repld-tool"
version = "0.0.17"
description = "Persistent Python runtime with MCP channel push. Dev shell and autonomous-agent substrate in one package."
readme = "README.md"
authors = [
    { name = "Fredrik Angelsen", email = "fredrikangelsen@gmail.com" }
]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
keywords = ["repl", "mcp", "agent", "browser"]
dependencies = []

[project.scripts]
repld = "repld:main"

[project.optional-dependencies]
pretty = [
    "rich>=15.0.0",
]
browser = [
    "duckdb>=1.5.2",
    "websockets>=16.0",
]

[dependency-groups]
# Optional extras installed in dev so basedpyright can resolve their imports.
dev = [
    "repld-tool[pretty,browser]",
]

[tool.uv.build-backend]
module-name = "repld"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "standard"
